force-app/main/default/objects/Service__c/fields/Service_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Service_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Pricing</label>
    <referenceTo>Service_Pricing__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>