force-app/main/default/objects/Service__c/fields/SLA_Days__c.field-meta.xml
<CustomField>
    <fullName>SLA_Days__c</fullName>
    <label>SLA Days</label>
    <length>100</length>
    <type>Text</type>
</CustomField>